Remove verbose test output

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,4 +76,4 @@ jobs:
         # run all (tools, calculations, workflows) tests using caching of the results
         #RUN_ALL='yes' ./run_all.sh
         # for now run voronoi calculations only, the rest needs fixing
-        RUN_VORONOI='t' ./run_all.sh -v
+        RUN_VORONOI='t' ./run_all.sh
