--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,5 +80,6 @@ jobs:
     
     - name: Upload code coverage report
       run: |
+        cd aiida_kkr/tests/
         pip install codecov
         codecov
