--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,6 +33,8 @@ repos:
       - id: pylint
         name: pylint
         entry: pylint
+        args: [-d, W, -d, R, -d, C]
+        verbose: true
         types: [python]
         language: system
         exclude: |
