Add aiida-kkr dir to strict pylint execution

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,7 @@ jobs:
     - name: Run pylint strict
       continue-on-error: true
       run: |
-        pylint
+        pylint aiida_kkr/
 
 
   tests:
