--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,8 +133,8 @@ jobs:
 
     - name: Install aiida-kkr
       run: |
-        # install aiida-kkr with aiida-core 1.5.2 (used in the generation of the test files, to use 1.6 we need to update the test files or caching won't work)
-        pip install --use-feature=2020-resolver .[testing] -r requirements_aiida-core_1.5.txt
+        # install aiida-kkr with aiida-core 1.6.4 (used in the generation of the test files on iffaiida)
+        pip install --use-feature=2020-resolver .[testing] -r .github/workflows/requirements_aiida-core_1.6.4.txt
         reentry scan
         pip freeze
 
