Activate running KKRhost tests as well

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,7 +151,7 @@ jobs:
         # run all (tools, calculations, workflows) tests using caching of the results
         #RUN_ALL='yes' ./run_all.sh
         # for now run voronoi calculations only, the rest needs fixing
-        RUN_VORONOI='t' ./run_all.sh
+        RUN_VORONOI=True RUN_KKRHOST=True ./run_all.sh
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
