--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,24 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.9', '3.8', '3.7']
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        aiida: [{version: 'aiida-core==1.6.8', name: '1.6.8'}, {version: 'aiida-core==2.0.1', name: '2.0.1'}]
+        masci-tools: [{version: 'masci-tools', name: ''}]
+        allowed-to-fail: [false]
+        include:
+          - python-version: 3.9
+            aiida: {version: 'git+https://github.com/aiidateam/aiida-core.git@main', name: 'latest'}
+            masci-tools: {version: 'masci-tools', name: ''}
+            allowed-to-fail: true
+          - python-version: 3.9
+            aiida: {version: 'aiida-core==1.6.8', name: '1.6.8'}
+            masci-tools: {version: 'git+https://github.com/JuDFTteam/masci-tools.git@develop', name: '-masci-develop'}
+            allowed-to-fail: true
+        exclude:
+          - python-version: 3.7
+            aiida: {version: 'aiida-core==2.0.1', name: '2.0.1'}
+            masci-tools: {version: 'masci-tools', name: ''}
+            allowed-to-fail: false
 
     services:
       postgres:
