--- a/.pylintrc
+++ b/.pylintrc
@@ -7,11 +7,11 @@ extension-pkg-whitelist=
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
-ignore=CVS,test,examples,setup.py
+ignore=CVS,test,examples,setup.py,conftest.py,check_pika-rabbitmq.py
 
 # Add files or directories matching the regex patterns to the blacklist. The
 # regex matches against base names, not paths.
-ignore-patterns=
+ignore-patterns=test_*
 
 # Python code to execute, usually for sys.path manipulation such as
 # pygtk.require().
