Get tests to start with aiida-core v2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -161,6 +161,11 @@ jobs:
         reentry scan
         pip freeze
 
+    - name: Migrate AiiDA workflow caches
+      run: |
+        cd ./tests/
+        python migrate_exports.py
+
     - name: Run pytest
       run: |
         cd tests/
