--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -167,7 +167,7 @@ jobs:
         cd ./tests/
         python migrate_exports.py
 
-    - name: Run pytest
+    - name: Fake JuKKR installation
       run: |
         cd tests/
         # fake installations of the JuKKR codes
@@ -176,11 +176,26 @@ jobs:
         cd jukkr && export PATH="$PWD:$PATH"
         touch kkr.x; touch voronoi.exe; touch kkrflex.exe
         chmod +x kkr.x voronoi.exe kkrflex.exe
-        cd ..
+
+    - name: Run pytest 1.6.8
+      if: matrix.aiida.name == '1.6.8'
+      run: |
+        cd tests/
         # run all (tools, calculations, workflows) tests using caching of the results
         #RUN_ALL='yes' ./run_all.sh
-        # for now run voronoi calculations only, the rest needs fixing
+        # for now run Voronoi and KKRhost calculations only, the rest needs fixing
         RUN_VORONOI=True RUN_KKRHOST=True ./run_all.sh
+
+    - name: Run pytest >=2.0.1
+      if: matrix.aiida.name != '1.6.8'
+      run: |
+        cd tests/
+        # First only run non-workflow tests but allow them to fail (some plotting still needs fixing)
+        CONTINUE_ON_ERROR=True ./run_all.sh
+        # then run Voronoi and KKRhost workflows only
+        SKIP_NOWORK=True RUN_VORONOI=True RUN_KKRHOST=True ./run_all.sh
+        # now also run the KKRimp tests
+        SKIP_NOWORK=True RUN_KKRIMP=True ./run_all.sh
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
