--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,7 +95,7 @@ jobs:
           # for python 3.9 we also test with the latest aiida-core version and the latest version of masci-tools
           - python-version: 3.9
             aiida: {version: 'git+https://github.com/aiidateam/aiida-core.git@main', name: 'latest'}
-            masci-tools: {version: 'masci-tools', name: ''}
+            masci-tools: {version: 'git+https://github.com/JuDFTteam/masci-tools.git@develop', name: '-masci-develop'}
             allowed-to-fail: true
           - python-version: 3.9
             aiida: {version: 'aiida-core==1.6.8', name: '1.6.8'}
@@ -197,6 +197,7 @@ jobs:
 
     - name: Archive test output artifacts
       uses: actions/upload-artifact@v3
+      if: always()
       with:
         name: test-results
         path: tests
