Install develop version of masci-tools for pre-commit stage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,7 @@ jobs:
     - name: Install python dependencies
       run: |
         pip install .[pre-commit]
+        pip install 'git+https://github.com/JuDFTteam/masci-tools.git@develop'
         pip freeze
 
     - name: Run pre-commit
