Update test files

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,7 @@ repos:
         name: yapf
         types: [python]
         args: ["-i"]
+        additional_dependencies: [toml]
 
   - repo: https://github.com/ikamensh/flynt/
     rev: '0.76'
