--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -176,9 +176,16 @@ jobs:
         chmod +x kkr.x voronoi.exe kkrflex.exe
 
     - name: Run pytest
+      if: ${{ ! matrix.allowed-to-fail }}
       run: |
         cd tests/
         GITHUB_SUITE=True ./run_all.sh
+
+    - name: Run pytest allow failure
+      if: ${{ matrix.allowed-to-fail }}
+      run: |
+        cd tests/
+        GITHUB_SUITE=True ./run_all.sh || exit 0
 
     - name: Archive test output artifacts
       uses: actions/upload-artifact@v3
