--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 1.1.13
+current_version = 2.0.0
 commit = True
 tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
@@ -17,10 +17,6 @@ values =
 search = version = "{current_version}"
 replace = version = "{new_version}"
 
-[bumpversion:file:setup.json]
-search = "version": "{current_version}"
-replace = "version": "{new_version}"
-
 [bumpversion:file:aiida_kkr/__init__.py]
-search = __version__ = "{current_version}"
-replace = __version__ = "{new_version}"
+search = __version__ = '{current_version}'
+replace = __version__ = '{new_version}'
