--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -6,13 +6,18 @@ sphinx:
    builder: html
    configuration: docs/source/conf.py
 
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
+
 # Optionally build your docs in additional formats such as PDF
 formats:
    - pdf
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-   version: 3.8
+   version: 3.11
    install:
      - method: pip
        path: .
