--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,8 @@ testing = [
     "pytest-mpl >= 0.10",
     "pytest-timeout >= 1.3.3",
     "pytest-regressions >= 1.0",
-    "MarkupSafe < 2.2.0"
+    "MarkupSafe < 2.2.0",
+    "aiida-test-cache"
 ]
 docs = [
     "Sphinx >= 1.8.2",
