--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,7 @@ testing = [
     "pytest-timeout >= 1.3.3",
     "pytest-regressions >= 1.0",
     "MarkupSafe < 3.1.0",
-    "aiida-test-cache"
+    "aiida-test-cache @ git+https://github.com/PhilippRue/aiida-test-cache.git@change_aiida-core_version"
 ]
 docs = [
     "Sphinx >= 1.8.2",
