--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -187,7 +187,7 @@ jobs:
       - name: Build and publish to PyPi
         run: |
           rm -rf tests # remove tests from pypi upload to save space
-          flit publish
+          flit publish --no-use-vcs
         env:
           FLIT_USERNAME: __token__
           FLIT_PASSWORD: ${{ secrets.PYPI_KEY }}
