--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "aiida-kkr"
-version = "2.3.0-dev3"
+version = "2.3.1-dev1"
 description = "AiiDA plugin for the JuKKR codes"
 classifiers = [
     "License :: OSI Approved :: MIT License",
@@ -71,7 +71,8 @@ testing = [
     "pytest-mpl >= 0.10",
     "pytest-timeout >= 1.3.3",
     "pytest-regressions >= 1.0",
-    "MarkupSafe < 3.1.0"
+    "MarkupSafe < 3.1.0",
+    "aiida-test-cache"
 ]
 docs = [
     "Sphinx >= 1.8.2",
