--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,10 +59,10 @@ Documentation = "https://aiida-kkr.readthedocs.io"
 
 [project.optional-dependencies]
 pre-commit = [
-    "pre-commit==4.0.1",
-    "yapf==0.43.0",
-    "pylint==1.9.4; python_version<'3.0'",
-    "pylint==3.3.1; python_version>='3.0'",
+    "pre-commit >= 4.0.1",
+    "yapf >= 0.43.0",
+    "pylint == 1.9.4; python_version < '3.0'",
+    "pylint >= 3.3.1; python_version >= '3.0'",
 ]
 testing = [
     "pgtest >= 1.3.0",
